<resources>
    <string name="app_name">FoodRev</string>
    <string name="foodrev">FOOD REV</string>
    <string name="loading">Loading In Progress...</string>
    <string name="useName">Enter UserName</string>
    <string name="password">Enter Password</string>
    <string name="btn">SignIn</string>
    <string name="tv">Forgot The Passwor??</string>
    <string name="todo1">TODO</string>
    <string name="signup">If You Don\'t Have Account</string>
    <string name="signup1">SignUp</string>
    <string name="fullName">Enter Full Name</string>
    <string name="email">Enter Email</string>
    <string name="city">Enter City</string>
    <string name="password1">Forget The Password??</string>
    <string name="uName">Enter UserName</string>
    <string name="Phone">Enter Phone Number</string>
    <string name="sup">SignUP</string>
    <string name="tSignup">SignUp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="PSignup">SignUp</string>
    <string name="sPara">Please enter the email to get the code to reset your password</string>
    <string name="gEmail">Enter Email</string>
    <string name="sBtn">Send Email</string>
    <string name="passw">Enter Password</string>
    <string name="forgetPass">Forget Password</string>
    <string name="pin">Enter the pin code you recieved by email</string>
    <string name="pinNumber">Enter Pin Number</string>
    <string name="reset">reset</string>
    <string name="todo">TODO</string>
    <string name="enterpin">Enter Pin Code</string>
    <string name="epara">Enter the pin code you received on the given email...</string>
    <string name="cbtn">Continue</string>
    <string name="review">So What You Want To Review?</string>
    <string name="fastfood">Fast Food</string>
    <string name="seafood">Sea Food</string>
    <string name="desifood">Desi Food</string>
    <string name="icecream">Ice Cream</string>
    <string name="chinesefood">Chinese Food</string>
    <string name="UserN">Enter Email</string>
    <string name="logout">Logout</string>
    <string name="back_to_login">Back To Login</string>
    <string name="credit">App Credits</string>
    <string name="name1">Waiz Haider</string>
    <string name="name2">Azka Mobin</string>
    <string name="name3">Mamoona Saeeda</string>
    <string name="log">Sure you want to log out?</string>
    <string name="btn1">Logout</string>
    <string name="turkish">Turkish Food</string>
    <string name="italianfood">Italian Food</string>
    <string name="thaifood">Thai Food</string>
</resources>