<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Logout">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginStart="120dp"
        android:layout_marginTop="50dp"
        android:src="@drawable/logo">

    </ImageView>

    <TextView
        android:id="@+id/credit"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:text="@string/credit"
        android:layout_marginStart="120dp"
        android:textSize="30sp"
        android:layout_marginTop="220dp"
        android:textColor="@color/black"
        android:textStyle="bold">

    </TextView>

    <TextView
        android:id="@+id/name1"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_marginTop="290dp"
        android:layout_marginStart="140dp"
        android:text="@string/name1"
        android:textSize="23sp">

    </TextView>

    <TextView
        android:id="@+id/name2"
        android:layout_width="wrap_content"
        android:layout_height="30sp"
        android:layout_below="@id/name1"
        android:layout_marginTop="20dp"
        android:layout_marginStart="140dp"
        android:text="@string/name2"
        android:textSize="23sp">

    </TextView>

    <TextView
        android:id="@+id/name3"
        android:layout_width="wrap_content"
        android:layout_height="30sp"
        android:layout_below="@id/name2"
        android:layout_marginTop="20dp"
        android:layout_marginStart="110dp"
        android:text="@string/name3"
        android:textSize="23sp">

    </TextView>

    <TextView
        android:id="@+id/log"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:text="@string/log"
        android:layout_below="@id/name3"
        android:layout_marginStart="70dp"
        android:textSize="25sp"
        android:layout_marginTop="20dp"
        android:textColor="@color/black"
        android:textStyle="bold">

    </TextView>

    <Button
        android:id="@+id/btn"
        android:layout_width="180dp"
        android:layout_height="50dp"
        android:layout_below="@+id/log"
        android:layout_marginStart="120dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/rounded_button"
        android:text="@string/btn1"
        android:textColor="@color/white"
        tools:ignore="TextContrastCheck,TextContrastCheck">

    </Button>

</RelativeLayout>