<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Login">
    <androidx.cardview.widget.CardView
        android:id="@+id/loginCard"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="30dp"
        app:cardCornerRadius="62dp">

        <ImageView
            android:id="@+id/loginImage"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:src="@drawable/logo"
            android:contentDescription="@string/todo">

        </ImageView>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardUserN"
        android:layout_width="280dp"
        android:layout_height="50dp"
        android:layout_marginStart="65dp"
        android:layout_marginTop="270dp"
        app:cardCornerRadius="62dp">


        <EditText
            android:id="@+id/userName"
            android:layout_width="280dp"
            android:layout_height="60dp"
            android:autofillHints=""
            android:ems="10"
            android:gravity="center_horizontal"
            android:hint="@string/UserN"
            android:inputType="textEmailAddress"
            android:textColor="@color/black"
            android:textColorHint="@color/black">

        </EditText>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardPassword"
        android:layout_width="280dp"
        android:layout_height="50dp"
        android:layout_marginStart="65dp"
        android:layout_marginTop="370dp"
        app:cardCornerRadius="62dp">

        <EditText
            android:id="@+id/password"
            android:layout_width="280dp"
            android:layout_height="60dp"
            android:autofillHints=""
            android:gravity="center_horizontal"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textColor="@color/black"
            android:textColorHint="@color/black">

        </EditText>

    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/btn"
        android:layout_width="180dp"
        android:layout_height="50dp"
        android:layout_below="@+id/cardPassword"
        android:layout_marginStart="120dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/rounded_button"
        android:text="@string/btn"
        android:textColor="@color/white"
        tools:ignore="TextContrastCheck,TextContrastCheck">

    </Button>



    <TextView
        android:id="@+id/tv"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="65dp"
        android:layout_below="@+id/btn"
        android:layout_marginTop="30dp"
        android:gravity="center_horizontal"
        android:text="@string/password1"
        android:textColor="@color/black"
        android:textSize="17sp"
        android:textStyle="bold">

    </TextView>

    <TextView
        android:id="@+id/signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv"
        android:layout_marginTop="30dp"
        android:layout_marginStart="100dp"
        android:text="@string/signup"
        android:textColor="@color/black"
        android:textSize="17sp">

    </TextView>

    <TextView
        android:id="@+id/signup1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv"
        android:layout_marginTop="30dp"
        android:layout_marginStart="303dp"
        android:text="@string/signup1"
        android:textColor="@color/black"
        android:textSize="17sp"
        android:textStyle="bold">

    </TextView>

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_marginTop="645dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="invisible"/>
</RelativeLayout>