<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Signup">

    <androidx.cardview.widget.CardView
        android:id="@+id/loginCard"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginStart="120dp"
        android:layout_marginTop="50dp"
        app:cardCornerRadius="62dp">

        <ImageView
            android:id="@+id/loginImage"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:src="@drawable/logo"
            android:contentDescription="@string/todo">

        </ImageView>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cUname"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_below="@+id/loginCard"
        android:layout_marginStart="115dp"
        android:layout_marginTop="20dp"
        app:cardCornerRadius="62dp">

        <EditText
            android:id="@+id/uName"
            android:layout_width="200dp"
            android:layout_height="58dp"
            android:gravity="center_horizontal"
            android:hint="@string/uName"
            android:inputType="text"
            android:minHeight="48dp"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:importantForAutofill="no">
        </EditText>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cEmail"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_below="@+id/cUname"
        android:layout_marginTop="20dp"
        android:layout_marginStart="115dp"
        app:cardCornerRadius="62dp">

        <EditText
            android:id="@+id/email"
            android:layout_width="200dp"
            android:layout_height="59dp"
            android:gravity="center_horizontal"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:minHeight="48dp"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:importantForAutofill=""
            android:autofillHints="">
        </EditText>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cCity"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_below="@+id/cEmail"
        android:layout_marginTop="20dp"
        android:layout_marginStart="115dp"
        app:cardCornerRadius="62dp">

        <EditText
            android:id="@+id/city"
            android:layout_width="200dp"
            android:layout_height="58dp"
            android:gravity="center_horizontal"
            android:hint="@string/city"
            android:inputType="text"
            android:minHeight="48dp"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:importantForAutofill=""
            android:autofillHints="">
        </EditText>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cPhone"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_below="@+id/cCity"
        android:layout_marginTop="20dp"
        android:layout_marginStart="115dp"
        app:cardCornerRadius="62dp">

        <EditText
            android:id="@+id/Phone"
            android:layout_width="200dp"
            android:layout_height="58dp"
            android:gravity="center_horizontal"
            android:hint="@string/Phone"
            android:inputType="phone"
            android:minHeight="48dp"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:importantForAutofill=""
            android:autofillHints="">
        </EditText>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cPassw"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_below="@+id/cPhone"
        android:layout_marginTop="20dp"
        android:layout_marginStart="115dp"
        app:cardCornerRadius="62dp">

        <EditText
            android:id="@+id/passw"
            android:layout_width="200dp"
            android:layout_height="57dp"
            android:gravity="center_horizontal"
            android:hint="@string/passw"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:autofillHints="">

        </EditText>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cSup"
        android:layout_width="150dp"
        android:layout_height="46dp"
        android:layout_below="@+id/cPassw"
        android:layout_marginTop="20dp"
        android:layout_marginStart="145dp"
        app:cardCornerRadius="62dp">


        <Button
            android:id="@+id/Sup"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:text="@string/sup">

        </Button>

    </androidx.cardview.widget.CardView>

</RelativeLayout>