<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="200dp"
        android:contentDescription="@string/todo"
        android:foregroundGravity="center_horizontal"
        android:src="@drawable/logo">

    </ImageView>

    <TextView
        android:id="@+id/foodRev"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="110dp"
        android:layout_marginTop="440dp"
        android:gravity="center_horizontal"
        android:text="@string/foodrev"
        android:textColor="@color/black"
        android:textSize="40sp"
        android:textStyle="bold">

    </TextView>

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="550dp"
        android:indeterminate="false"
        android:max="100"
        android:minWidth="200dp"
        android:minHeight="50dp"
        android:progress="0"
        android:theme="@style/BlueAccent" />

    <TextView
        android:id="@+id/Loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/progressBar"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:text="@string/loading"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:visibility="visible">

    </TextView>


</RelativeLayout>